# PipeSightConsoleServer

./: .gitignore  README.md
3d_camera/linux/: CMakeLists.txt  build.sh  run_ascamera.sh
3d_camera/linux/include/: Camera.h  CameraSrv.h  Demo.h
3d_camera/linux/src/: Camera.cpp  CameraSrv.cpp  Demo.cpp  main.cpp
deploy/: 99-pipesight-serial.rules  README.md  UDEV_SETUP.md  install.sh  pipesight-backend.service  pipesight-pcl-bridge.service  uninstall.sh  update.sh
doc/: .~lock.Modbus 通讯协议_V1.1.doc#  Modbus 通讯协议_V1.1.doc  Web架构设计与实施计划.md  小车软件功能界面(1).docx
front_end/: index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
front_end/src/: App.vue  api.ts  main.ts  router.ts  shims.d.ts  styles.css  types.ts  ws.ts
lecheng/Analytics/: Get_Analytics_Modules.xml  Get_Rules.xml  Get_Service_Capabilities.xml  Get_Supported_Analytics_Modules.xml  Get_Supported_Rules.xml
lecheng/DeviceIO/: Get_Audio_Outputs.xml  Get_Audio_Sources.xml  Get_Digital_Inputs.xml  Get_Relay_Outputs.xml  Get_Serial_Port_Configuration.xml  Get_Serial_Port_Configuration_Options.xml  Get_Serial_Ports.xml  Get_Service_Capabilities.xml  Get_Video_Outputs.xml  Get_Video_Sources.xml
lecheng/Device_Management/: Get_Capabilities_All.xml  Get_Device_Information.xml  Get_Hostname.xml  Get_Interfaces.xml  Get_Network_Protocols.xml  Get_Scopes.xml  Get_Service_Capabilities.xml  Get_Services.xml  Get_System_Date_And_Time.xml  Get_System_Uris.xml  Get_Users.xml
lecheng/Events/: Create_Pull_Point_Subscription.xml  Get_Event_Properties.xml  Get_Service_Capabilities.xml  Pull_Messages.xml
lecheng/Imaging/: Get_Imaging_Settings.xml  Get_Move_Options.xml  Get_Options.xml  Get_Service_Capabilities.xml  Get_Status.xml
lecheng/Media1/: Get_Audio_Encoder_Configurations.xml  Get_Audio_Outputs.xml  Get_Audio_Source_Configurations.xml  Get_Audio_Sources.xml  Get_Metadata_Configurations.xml  Get_OSDs.xml  Get_Profiles.xml  Get_Service_Capabilities.xml  Get_Snapshot_Uri.xml  Get_Stream_Uri.xml  Get_Video_Analytics_Configurations.xml  Get_Video_Encoder_Configurations.xml  Get_Video_Source_Configurations.xml  Get_Video_Sources.xml
lecheng/Media2/: Get_Analytics_Configurations.xml  Get_Audio_Decoder_Configurations.xml  Get_Audio_Encoder_Configurations.xml  Get_Audio_Output_Configurations.xml  Get_Audio_Source_Configurations.xml  Get_Metadata_Configurations.xml  Get_OSD_Options.xml  Get_OSDs.xml  Get_Profiles.xml  Get_Service_Capabilities.xml  Get_Snapshot_Uri.xml  Get_Stream_Uri.xml  Get_Video_Encoder_Configuration_Options.xml  Get_Video_Encoder_Configurations.xml  Get_Video_Source_Configuration_Options.xml  Get_Video_Source_Configurations.xml
lecheng/PTZ/: Get_Configuration_Options.xml  (+5 more)
pointcloud_bridge/: build.sh  main.cpp  run.sh  ws_server.h
server/: .env.example  pyproject.toml  run.sh
server/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
server/app/api/: __init__.py  annotations.py  cameras.py  chassis.py  media.py  media_proxy.py  projects.py  reports.py  settings.py  system.py
server/app/drivers/: __init__.py  onvif_client.py  onvif_ptz.py  rtsp.py
server/app/services/: annotation_service.py  imu_service.py  media_service.py  mediamtx_service.py  modbus_service.py  odometer_service.py  osd_service.py  recorder_service.py  report_service.py  settings_service.py  snapshot_service.py  storage_service.py
server/app/ws/: _proxy.py  camera_control.py  depth.py  pointcloud.py
server/scripts/: onvif_delete_osd.py  onvif_probe_encoder.py  onvif_set_h264.py  ptz_diag.py
(+27 files in other folders)
