[project]
name = "pipesight-server"
version = "0.1.0"
description = "PipeSight web backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy",
  "httpx",
  "python-multipart"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
# Only "app" is the Python package. Without this, setuptools' flat-layout
# auto-discovery also finds the runtime dirs (data/ storage/ third_party/) that
# get created on startup and aborts with "Multiple top-level packages".
packages = ["app"]
